<resources>
    <string name="app_name">Tistics</string>
    <string name="toolbar_name_account">Account</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="myaccount">My Account</string>
    <string name="hometitle">Tistics</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="rateus">Rate us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="search_title">Search Products</string>
    <string name="title_activity_order_tracking">Map</string>
    <string name="title_activity_order_location_map">Map</string>
</resources>
